<resources>
    <string name="app_name">傻孩子出行</string>
    <string name="applicationId">com.yinglan.sct</string>
    <string name="loggingLoad">登录中&#8230;</string>
    <string name="sendingLoad">发送中&#8230;</string>
    <string name="dataLoad">数据加载中&#8230;</string>
    <string name="submissionLoad">提交中&#8230;</string>
    <string name="submitSuccess">提交成功！</string>
    <string name="crossLoad">上传中&#8230;</string>
    <string name="download">下载中&#8230;</string>
    <string name="shareJumpLoad">分享跳转中&#8230;</string>
    <string name="saveLoad">保存中&#8230;</string>
    <string name="paymentLoad">支付中&#8230;</string>
    <string name="cancelLoad">取消中&#8230;</string>
    <string name="deleteLoad">删除中&#8230;</string>
    <string name="addLoad">加入中&#8230;</string>
    <string name="attentionLoad">关注中&#8230;</string>
    <string name="cancelCttentionLoad">取消关注中&#8230;</string>
    <string name="reportLoad">举报中&#8230;</string>
    <string name="customerServiceLoad">连接客服中&#8230;</string>
    <string name="videoPathError">视频路径错误</string>
    <string name="imagePathError">图片路径错误</string>
    <string name="noData">没有数据</string>
    <string name="failedUploadPicture">上传失败，请重试</string>
    <string name="failedUploadVideo">上传失败，请重试</string>
    <string name="readAndWrite">这款应用需要获取读写权限，才能使用</string>
    <string name="sdPermission">您拒绝了「SD卡读写权限」所需要的相关权限!请到「设置」开启权限</string>
    <string name="locationRelatedPermission">您拒绝了「定位」所需要的相关权限!</string>
    <string name="denyPermission">您拒绝了「图片选择」所需要的相关权限!</string>
    <string name="needPermission">图片选择需要以下权限:\n\n1.访问设备上的照片\n\n2.拍照\n\n3.读写权限</string>
    <string name="operation_error">操作失败,请稍后再试</string>
    <string name="alipay_system_exception">支付系统异常</string>
    <string name="alipay_account_exception">此帐号绑定的支付宝账户被冻结或不允许支付</string>
    <string name="alipay_has_unbound">该用户已解除绑定</string>
    <string name="alipay_order_error">订单支付失败</string>
    <string name="alipay_order_cancel">您取消了支付</string>
    <string name="pay_error">支付失败</string>
    <string name="pay_network">网络连接异常</string>
    <string name="pay_result_confirmed">支付结果确认中</string>
    <string name="alipay_order_canceled">支付已取消</string>
    <string name="payment_succeed">恭喜您，支付成功！</string>
    <string name="alipay_succeed">支付成功</string>
    <string name="wxappinstalled">请先安装微信再进行支付</string>
    <string name="alipayappinstalled">请先安装支付宝再进行支付</string>
    <string name="iKnow">我知道了</string>
    <string name="skip">跳过 ></string>
    <string name="experienceImmediately">立即体验</string>
    <string name="notOpenPositionSwitchClose">本应用需要结合定位功能使用，请点击按钮关闭应用，去打开定位开关后，重启应用即可正常使用</string>
    <string name="login">登录</string>
    <string name="number0">0123456789</string>
    <string name="alphanumeric">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="accountNumber">帐号</string>
    <string name="hintAccountText">请输入手机号码</string>
    <string name="inputPhone">请输入正确的帐号</string>
    <string name="password">密码</string>
    <string name="hintPasswordText">请输入数字、字母或字符</string>
    <string name="hintPasswordText5">请输入密码</string>
    <string name="hintPasswordText3">请输入确认密码</string>
    <string name="hintPasswordText4">请再次输入密码</string>
    <string name="hintPasswordText2">账号或密码错误</string>
    <string name="hintPasswordText1">密码为6～20位内的数字、字母或字符组合,请正确填写</string>
    <string name="forgotPassword">忘记密码?</string>
    <string name="bindingPhone">绑定手机号</string>
    <string name="binding">绑定</string>
    <string name="register">注册</string>
    <string name="noAccount">没有账号？</string>
    <string name="register1">立即注册</string>
    <string name="errorCode">请填写验证码</string>
    <string name="thirdpartylogin">第三方账号快捷登录</string>
    <string name="thirdqq">QQ</string>
    <string name="thirdweixin">微信</string>
    <string name="authorizationLoad">授权中&#8230;</string>
    <string name="authoriseErr">授权失败，请重试</string>
    <string name="authoriseErr1">您取消了授权</string>
    <string name="authoriseErr2">您还没有安装应用,请下载应用</string>
    <string name="authoriseErr3">没有安装应用</string>
    <string name="loginErr">登录失败，请重新登录</string>
    <string name="loginErr1">获取用户信息失败，请重新登录</string>
    <string name="failedCloudInformation">获取融云信息失败</string>
    <string name="failedCloudInformation1">获取融云信息失败,请用账号密码登录</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="secret">保密</string>
    <string name="selectCountryCode">选择国家区号</string>
    <string name="retry">重试</string>
    <string name="registerPhone">手机号注册</string>
    <string name="hintPhoneText2">国际号码前无需加0</string>
    <string name="hintPhoneText">请输入手机号</string>
    <string name="hintPhoneText1">请输入正确的手机号</string>
    <string name="hintInvitationCode">请输入邀请码</string>
    <string name="hintPassword1Text">请输入您的密码</string>
    <string name="hintPassword2Text">请再次输入您的密码</string>
    <string name="resetpwd">重置密码成功，请登录！</string>
    <string name="confirmPassword">确认密码</string>
    <string name="pleasePasswordAgain">请再输入一遍密码</string>
    <string name="password3">请输入6～20位密码</string>
    <string name="testget">已发送</string>
    <string name="toResend">s后重发</string>
    <string name="passwordMismatch">两次密码输入不一致</string>
    <string name="retrievePassword">找回密码</string>
    <string name="verificationCode">验证码</string>
    <string name="testGetCode">获取验证码</string>
    <string name="revalidation">重新验证</string>
    <string name="clickFinish">点击完成代表您同意</string>
    <string name="myagreement">点击注册即表示您同意</string>
    <string name="agreement">《傻孩子注册协议》</string>
    <string name="agreement1">傻孩子注册协议</string>
    <string name="determine">确定</string>
    <string name="homePage">首页</string>
    <string name="community">社区</string>
    <string name="message">消息</string>
    <string name="activity">活动</string>
    <string name="mine">我的</string>
    <string name="clickAgainExitProgram">再按一次退出程序</string>
    <string name="sillyChild">傻孩子</string>
    <string name="airportPickup">接机</string>
    <string name="boutiqueLine">精品线路</string>
    <string name="privateOrdering">私人定制</string>
    <string name="byTheDay">按天包车</string>
    <string name="airportDropOff">送机</string>
    <string name="selectLine">精选线路</string>
    <string name="moreLines">更多线路</string>
    <string name="hotRegion">热门地区</string>
    <string name="moreCities">更多城市</string>
    <string name="sillyChildCustomerService">傻孩子客服</string>
    <string name="notOpenPositionSwitch">未打开位置开关，可能导致定位失败或定位不准，请打开GPS</string>
    <string name="openPositionSwitch">定位需要以下权限:\n\n1.访问设备上的gps\n\n2.读写权限</string>
    <string name="wantGoOutPlay">想出去玩？找傻孩子聊聊吧</string>
    <string name="flightNumber">航班号</string>
    <string name="inputFlightNumber">填写航班号</string>
    <string name="alphanumeric2">ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="deliveredSite">送达地点</string>
    <string name="fillDestination">填写目的地</string>
    <string name="flightArrivalTime">航班到达时间</string>
    <string name="selectEstimatedArrivalTimeFlight">请选择航班预计到达时间</string>
    <string name="pleaseEnterFlightNumber">请填写航班号</string>
    <string name="pleaseDeliveredSite">请填写送达地点</string>
    <string name="selectEstimatedArrivalTimeFlight1">航班预计到达时间应大于当前时间</string>
    <string name="giveLike">点赞</string>
    <string name="people">人</string>
    <string name="jian">件</string>
    <string name="canSitUp">最多可坐</string>
    <string name="ordered">已预定</string>
    <string name="time">次</string>
    <string name="numberSendMachine">送机人数</string>
    <string name="baggageNumber1">行李件数</string>
    <string name="pickUpNumber">接机人数</string>
    <string name="customerInformation">客户信息</string>
    <string name="flightInformation">航班信息</string>
    <string name="contactInformation">联系人信息</string>
    <string name="deliveredAirport">送达机场</string>
    <string name="fillServiceAirport">填写送达机场</string>
    <string name="placeDeparture">出发地点</string>
    <string name="placeDeparture2">填写出发地</string>
    <string name="timeDeparture">出发时间</string>
    <string name="selectDepartureTime">请选择出发时间</string>
    <string name="contact">联系人</string>
    <string name="ContactName">联系人姓名</string>
    <string name="contactWay3">联系方式</string>
    <string name="ContactNumber">联系人电话</string>
    <string name="ContactNumber1">请填写联系人电话</string>
    <string name="dueDemand">预定需求</string>
    <string name="adult1">成人：</string>
    <string name="numberPeople">人数：</string>
    <string name="notesSpecialRequirements">有特别要求您可以在此填写备注</string>
    <string name="children1">儿童：</string>
    <string name="luggage1">行李：</string>
    <string name="pleaseSelect">请选择</string>
    <string name="remark1">备注</string>
    <string name="submitOrder">提交订单</string>
    <string name="fillPlaceDeparture1">请填写出发地点</string>
    <string name="selectDepartureTime1">出发时间应大于当前时间</string>
    <string name="ContactName1">请填写联系人姓名</string>
    <string name="adult3">请选择成人数</string>
    <string name="adult4">成人和儿童总人数超过乘客人数</string>
    <string name="luggage2">行李数超过汽车所能携带行李数</string>
    <string name="compensationChangeBack">退订政策</string>
    <string name="noExplanation">暂无相关说明，敬请期待！</string>
    <string name="priceInformation">价格信息</string>
    <string name="modelCar">车型</string>
    <string name="canTakeNumber">可乘人数</string>
    <string name="carPrices">车型价格</string>
    <string name="containsService">包含服务</string>
    <string name="servicePolicy">服务政策</string>
    <string name="serviceDescription">服务说明</string>
    <string name="serviceNote">服务备注</string>
    <string name="particularRequirement">您还有什么特别需求</string>
    <string name="userEvaluation">用户评价</string>
    <string name="nextStep">下一步</string>
    <string name="selectProduct">选择产品</string>
    <string name="optionDate1">请选择服务日期</string>
    <string name="product">产品</string>
    <string name="payAgain">重新支付</string>
    <string name="buyingSillyChildren">感谢您在傻孩子购买商品！</string>
    <string name="orderNumber1">订单号：</string>
    <string name="consignee2">收货人：</string>
    <string name="deliveryAddress1">收货地址：</string>
    <string name="amount1">金额：</string>
    <string name="checkOrder">查看订单</string>
    <string name="returnHomePage">返回首页</string>
    <string name="choosePaymentMethod">选择支付方式</string>
    <string name="noRemark">暂无备注</string>
    <string name="renminbi">¥</string>
    <string name="usable1">张优惠券</string>
    <string name="priceDescription">价格说明</string>
    <string name="dueThat">预定说明</string>
    <string name="orderPriceNoSign">订单价格</string>
    <string name="orderPriceNoSign1">订单总价</string>
    <string name="vouchers">抵用券</string>
    <string name="actualPayment1">实际支付：</string>
    <string name="fillInformation">填写信息</string>
    <string name="paymentOrder">支付订单</string>
    <string name="lateCancelled">请在</string>
    <string name="lateCancelled1">内付款，逾期订单将被取消</string>
    <string name="payParseError">支付失败！解析数据错误，您可以移步至客服！</string>
    <string name="tradingClosed">交易关闭</string>
    <string name="waitingPayment">等待买家付款</string>
    <string name="weChatPay">微信支付</string>
    <string name="alipayToPay">支付宝支付</string>
    <string name="unionpayPay">银联支付</string>
    <string name="balancePay">余额支付</string>
    <string name="currentBalance">当前余额：</string>
    <string name="travelTime">出行时间</string>
    <string name="destination">目的地</string>
    <string name="playNumberDays">游玩天数</string>
    <string name="touristNumber">游客人数</string>
    <string name="travelPreferences">出行偏好</string>
    <string name="recommendRestaurant">餐馆偏好</string>
    <string name="recommendedAccommodation">住宿偏好</string>
    <string name="customizedItinerary">定制行程</string>
    <string name="chooseTimeNeedServe">选择你需要服务的时间</string>
    <string name="day">日</string>
    <string name="one">一</string>
    <string name="two">二</string>
    <string name="three">三</string>
    <string name="four">四</string>
    <string name="five">五</string>
    <string name="six">六</string>
    <string name="dynamicState">动态</string>
    <string name="route">线路</string>
    <string name="all">全部</string>
</resources>