<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchWrap"
    android:background="@drawable/shape_selectproduct"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_selectProductAirport"
        style="@style/MatchWrap"
        android:scaleType="fitXY"
        android:src="@mipmap/placeholderfigure" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/MatchWrap"
        android:paddingLeft="@dimen/dimen7"
        android:paddingTop="@dimen/dimen15"
        android:paddingRight="@dimen/dimen7"
        android:singleLine="true"
        android:text="成田机场接机"
        android:textColor="@color/greenColors"
        android:textSize="@dimen/textsize11" />

    <LinearLayout
        style="@style/MatchWrap"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_vehicleName"
            style="@style/AutoWrap"
            android:paddingLeft="@dimen/dimen7"
            android:paddingTop="@dimen/dimen17"
            android:paddingRight="@dimen/dimen7"
            android:paddingBottom="@dimen/dimen10"
            android:singleLine="true"
            android:text="丰田阿尔法"
            android:textColor="@color/tabColors"
            android:textSize="@dimen/textsize10" />


        <TextView
            style="@style/WrapWrap"
            android:paddingLeft="@dimen/dimen7"
            android:paddingTop="@dimen/dimen17"
            android:paddingRight="@dimen/dimen7"
            android:singleLine="true"
            android:text="￥2450.00"
            android:textColor="@color/fF4848Colors"
            android:textSize="@dimen/textsize10"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        style="@style/MatchWrap"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dimen9">

        <TextView
            style="@style/WrapWrap"
            android:paddingLeft="@dimen/dimen7"
            android:text="@string/canSitUp"
            android:textColor="@color/hintColors"
            android:textSize="@dimen/textsize9" />

        <TextView
            android:id="@+id/tv_people"
            style="@style/WrapWrap"
            android:text="6"
            android:textColor="@color/greenColors"
            android:textSize="@dimen/textsize9" />

        <TextView
            style="@style/WrapWrap"
            android:text="@string/people"
            android:textColor="@color/hintColors"
            android:textSize="@dimen/textsize9" />

        <TextView
            style="@style/AutoWrap"
            android:gravity="right"
            android:paddingLeft="@dimen/dimen7"
            android:text="@string/ordered"
            android:textColor="@color/hintColors"
            android:textSize="@dimen/textsize9" />

        <TextView
            android:id="@+id/tv_bookingNum"
            style="@style/WrapWrap"
            android:text="126"
            android:textColor="@color/fF4848Colors"
            android:textSize="@dimen/textsize9" />

        <TextView
            style="@style/WrapWrap"
            android:paddingRight="@dimen/dimen7"
            android:text="@string/time"
            android:textColor="@color/hintColors"
            android:textSize="@dimen/textsize9" />

    </LinearLayout>


</LinearLayout>