<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <ScrollView
        style="@style/MatchMatch"
        android:scrollbars="none">

        <LinearLayout
            style="@style/MatchMatch"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_picture"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen379"
                android:layout_marginTop="@dimen/dimen6"
                android:scaleType="fitXY"
                android:src="@mipmap/mine_background" />

            <TextView
                android:id="@+id/tv_content"
                style="@style/MatchWrap"
                android:background="@color/whiteColors"
                android:paddingLeft="@dimen/dimen19"
                android:paddingTop="@dimen/dimen20"
                android:paddingRight="@dimen/dimen19"
                android:paddingBottom="@dimen/dimen20"
                android:text="私人订制说明私人定制说明私人订制说明私人定制说明私人订制说明私人定制说明私人订制说明私人定制说明私人订制说明私人定制说明私人订制说明私人定制说明私人订制说明私人定制说明"
                android:textColor="@color/hintColors"
                android:textSize="@dimen/textsize11"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/ll_travelTime"
                style="@style/Match50"
                android:layout_marginTop="@dimen/dimen10"
                android:background="@color/whiteColors"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/WrapWrap"
                    android:paddingLeft="@dimen/dimen18"
                    android:text="@string/travelTime"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textsize14" />

                <TextView
                    android:id="@+id/tv_travelTime"
                    style="@style/AutoWrap"
                    android:gravity="right"
                    android:paddingLeft="@dimen/dimen10"
                    android:paddingRight="@dimen/dimen10"
                    android:textColor="@color/hintColors"
                    android:textSize="@dimen/textsize12" />

                <ImageView
                    style="@style/Image812"
                    android:layout_marginLeft="@dimen/dimen10"
                    android:layout_marginRight="@dimen/dimen32"
                    android:src="@mipmap/arrow1" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_destination"
                style="@style/Match50"
                android:layout_marginTop="@dimen/dimen3"
                android:background="@color/whiteColors"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/WrapWrap"
                    android:paddingLeft="@dimen/dimen18"
                    android:text="@string/destination"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textsize14" />

                <TextView
                    android:id="@+id/tv_destination"
                    style="@style/AutoWrap"
                    android:gravity="right"
                    android:paddingLeft="@dimen/dimen10"
                    android:paddingRight="@dimen/dimen10"
                    android:textColor="@color/hintColors"
                    android:textSize="@dimen/textsize14" />

                <ImageView
                    style="@style/Image812"
                    android:layout_marginLeft="@dimen/dimen10"
                    android:layout_marginRight="@dimen/dimen32"
                    android:src="@mipmap/arrow1" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_playNumberDays"
                style="@style/Match50"
                android:layout_marginTop="@dimen/dimen3"
                android:background="@color/whiteColors"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/WrapWrap"
                    android:paddingLeft="@dimen/dimen18"
                    android:text="@string/playNumberDays"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textsize14" />

                <TextView
                    android:id="@+id/tv_playNumberDays"
                    style="@style/AutoWrap"
                    android:gravity="right"
                    android:paddingLeft="@dimen/dimen10"
                    android:paddingRight="@dimen/dimen10"
                    android:textColor="@color/hintColors"
                    android:textSize="@dimen/textsize14" />

                <ImageView
                    style="@style/Image812"
                    android:layout_marginLeft="@dimen/dimen10"
                    android:layout_marginRight="@dimen/dimen32"
                    android:src="@mipmap/arrow1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_touristNumber"
                style="@style/Match50"
                android:layout_marginTop="@dimen/dimen3"
                android:background="@color/whiteColors"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/WrapWrap"
                    android:paddingLeft="@dimen/dimen18"
                    android:text="@string/touristNumber"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textsize14" />

                <TextView
                    android:id="@+id/tv_touristNumber"
                    style="@style/AutoWrap"
                    android:gravity="right"
                    android:paddingLeft="@dimen/dimen10"
                    android:paddingRight="@dimen/dimen10"
                    android:textColor="@color/hintColors"
                    android:textSize="@dimen/textsize14" />

                <ImageView
                    style="@style/Image812"
                    android:layout_marginLeft="@dimen/dimen10"
                    android:layout_marginRight="@dimen/dimen32"
                    android:src="@mipmap/arrow1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_travelPreferences"
                style="@style/Match50"
                android:layout_marginTop="@dimen/dimen3"
                android:background="@color/whiteColors"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/WrapWrap"
                    android:paddingLeft="@dimen/dimen18"
                    android:text="@string/travelPreferences"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textsize14" />

                <TextView
                    android:id="@+id/tv_travelPreferences"
                    style="@style/AutoWrap"
                    android:gravity="right"
                    android:paddingLeft="@dimen/dimen10"
                    android:paddingRight="@dimen/dimen10"
                    android:textColor="@color/hintColors"
                    android:textSize="@dimen/textsize14" />

                <ImageView
                    style="@style/Image812"
                    android:layout_marginLeft="@dimen/dimen10"
                    android:layout_marginRight="@dimen/dimen32"
                    android:src="@mipmap/arrow1" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_recommendRestaurant"
                style="@style/Match50"
                android:layout_marginTop="@dimen/dimen3"
                android:background="@color/whiteColors"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    style="@style/WrapWrap"
                    android:paddingLeft="@dimen/dimen18"
                    android:text="@string/recommendRestaurant"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textsize14" />

                <TextView
                    android:id="@+id/tv_recommendRestaurant"
                    style="@style/AutoWrap"
                    android:gravity="right"
                    android:paddingLeft="@dimen/dimen10"
                    android:paddingRight="@dimen/dimen10"
                    android:textColor="@color/hintColors"
                    android:textSize="@dimen/textsize14" />

                <ImageView
                    style="@style/Image812"
                    android:layout_marginLeft="@dimen/dimen10"
                    android:layout_marginRight="@dimen/dimen32"
                    android:src="@mipmap/arrow1" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_recommendedAccommodation"
                style="@style/Match50"
                android:layout_marginTop="@dimen/dimen3"
                android:background="@color/whiteColors"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    style="@style/WrapWrap"
                    android:paddingLeft="@dimen/dimen18"
                    android:text="@string/recommendedAccommodation"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textsize12" />

                <TextView
                    android:id="@+id/tv_recommendedAccommodation"
                    style="@style/AutoWrap"
                    android:gravity="right"
                    android:paddingLeft="@dimen/dimen10"
                    android:paddingRight="@dimen/dimen10"
                    android:textColor="@color/hintColors"
                    android:textSize="@dimen/textsize14" />

                <ImageView
                    style="@style/Image812"
                    android:layout_marginLeft="@dimen/dimen10"
                    android:layout_marginRight="@dimen/dimen32"
                    android:src="@mipmap/arrow1" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_remark"
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/dimen7"
                android:background="@color/whiteColors"
                android:gravity="left"
                android:hint="@string/remark1"
                android:minHeight="@dimen/dimen174"
                android:paddingLeft="@dimen/dimen18"
                android:paddingTop="@dimen/dimen12"
                android:paddingRight="@dimen/dimen32"
                android:paddingBottom="@dimen/dimen12"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColors"
                android:textCursorDrawable="@drawable/shape_cursor"
                android:textSize="@dimen/textsize12" />

            <TextView
                android:id="@+id/tv_customizedItinerary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen41"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dimen97"
                android:layout_marginTop="@dimen/dimen30"
                android:layout_marginRight="@dimen/dimen97"
                android:layout_marginBottom="@dimen/dimen19"
                android:background="@drawable/shape_displaypage"
                android:gravity="center"
                android:text="@string/customizedItinerary"
                android:textColor="@color/whiteColors"
                android:textSize="@dimen/textsize16" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>